--- a/students/smccutcheon.html
+++ b/students/smccutcheon.html
@@ -65,14 +65,21 @@ img {
 
 <div id="TOC">
 <ul>
+<li><a href="#lab-2-hw-1">Lab 2, HW 1</a><ul>
 <li><a href="#content">Content</a></li>
 <li><a href="#techniques">Techniques</a></li>
 <li><a href="#data">Data</a></li>
 <li><a href="#image">Image</a></li>
 <li><a href="#data-file">Data File</a></li>
+</ul></li>
+<li><a href="#lab-3-hw-2">Lab 3, HW 2</a><ul>
+<li><a href="#data-wrangling">Data Wrangling</a></li>
+</ul></li>
 </ul>
 </div>
 
+<div id="lab-2-hw-1" class="section level2">
+<h2>Lab 2, HW 1</h2>
 <div id="organization" class="section level4">
 <h4>Organization</h4>
 <p><a href="https://github.com/fire-mitigation">fire-mitigation</a></p>
@@ -152,6 +159,296 @@ summary(d)</code></pre>
 ##  Mean   :31.92   Mean   :19.58  
 ##  3rd Qu.:69.00   3rd Qu.: 4.00  
 ##  Max.   :69.00   Max.   :69.00</code></pre>
+</div>
+</div>
+<div id="lab-3-hw-2" class="section level2">
+<h2>Lab 3, HW 2</h2>
+<div id="data-wrangling" class="section level3">
+<h3>Data Wrangling</h3>
+<pre class="r"><code># list of packages
+pkgs = c(
+  'readr',        # read csv
+  'readxl',       # read xls
+  'dplyr',        # data frame manipulation
+  'tidyr',        # data tidying
+  'nycflights13', # test dataset of NYC flights for 2013
+  'gapminder')    # test dataset of life expectancy and popultion
+
+# install packages if not found
+for (p in pkgs){
+  if (!require(p, character.only=T)){
+    install.packages(p)
+  }
+}</code></pre>
+<div id="traditional-csv-read" class="section level4">
+<h4>Traditional csv read</h4>
+<pre class="r"><code>d = read.csv('../data/r-ecology/species.csv')
+d</code></pre>
+<pre><code>##    species_id            genus         species    taxa
+## 1          AB       Amphispiza       bilineata    Bird
+## 2          AH Ammospermophilus         harrisi  Rodent
+## 3          AS       Ammodramus      savannarum    Bird
+## 4          BA          Baiomys         taylori  Rodent
+## 5          CB  Campylorhynchus brunneicapillus    Bird
+## 6          CM      Calamospiza     melanocorys    Bird
+## 7          CQ       Callipepla        squamata    Bird
+## 8          CS         Crotalus      scutalatus Reptile
+## 9          CT    Cnemidophorus          tigris Reptile
+## 10         CU    Cnemidophorus       uniparens Reptile
+## 11         CV         Crotalus         viridis Reptile
+## 12         DM        Dipodomys        merriami  Rodent
+## 13         DO        Dipodomys           ordii  Rodent
+## 14         DS        Dipodomys     spectabilis  Rodent
+## 15         DX        Dipodomys             sp.  Rodent
+## 16         EO          Eumeces       obsoletus Reptile
+## 17         GS         Gambelia           silus Reptile
+## 18         NL          Neotoma        albigula  Rodent
+## 19         NX          Neotoma             sp.  Rodent
+## 20         OL        Onychomys     leucogaster  Rodent
+## 21         OT        Onychomys        torridus  Rodent
+## 22         OX        Onychomys             sp.  Rodent
+## 23         PB      Chaetodipus         baileyi  Rodent
+## 24         PC           Pipilo       chlorurus    Bird
+## 25         PE       Peromyscus        eremicus  Rodent
+## 26         PF      Perognathus          flavus  Rodent
+## 27         PG        Pooecetes       gramineus    Bird
+## 28         PH      Perognathus        hispidus  Rodent
+## 29         PI      Chaetodipus     intermedius  Rodent
+## 30         PL       Peromyscus        leucopus  Rodent
+## 31         PM       Peromyscus     maniculatus  Rodent
+## 32         PP      Chaetodipus    penicillatus  Rodent
+## 33         PU           Pipilo          fuscus    Bird
+## 34         PX      Chaetodipus             sp.  Rodent
+## 35         RF  Reithrodontomys      fulvescens  Rodent
+## 36         RM  Reithrodontomys       megalotis  Rodent
+## 37         RO  Reithrodontomys        montanus  Rodent
+## 38         RX  Reithrodontomys             sp.  Rodent
+## 39         SA       Sylvilagus       audubonii  Rabbit
+## 40         SB         Spizella         breweri    Bird
+## 41         SC       Sceloporus          clarki Reptile
+## 42         SF         Sigmodon     fulviventer  Rodent
+## 43         SH         Sigmodon        hispidus  Rodent
+## 44         SO         Sigmodon    ochrognathus  Rodent
+## 45         SS     Spermophilus       spilosoma  Rodent
+## 46         ST     Spermophilus    tereticaudus  Rodent
+## 47         SU       Sceloporus       undulatus Reptile
+## 48         SX         Sigmodon             sp.  Rodent
+## 49         UL           Lizard             sp. Reptile
+## 50         UP           Pipilo             sp.    Bird
+## 51         UR           Rodent             sp.  Rodent
+## 52         US          Sparrow             sp.    Bird
+## 53         ZL      Zonotrichia      leucophrys    Bird
+## 54         ZM          Zenaida        macroura    Bird</code></pre>
+<pre class="r"><code>head(d)</code></pre>
+<pre><code>##   species_id            genus         species   taxa
+## 1         AB       Amphispiza       bilineata   Bird
+## 2         AH Ammospermophilus         harrisi Rodent
+## 3         AS       Ammodramus      savannarum   Bird
+## 4         BA          Baiomys         taylori Rodent
+## 5         CB  Campylorhynchus brunneicapillus   Bird
+## 6         CM      Calamospiza     melanocorys   Bird</code></pre>
+<pre class="r"><code>summary(d)</code></pre>
+<pre><code>##    species_id             genus         species        taxa   
+##  AB     : 1   Chaetodipus    : 4   sp.      :10   Bird   :13  
+##  AH     : 1   Dipodomys      : 4   hispidus : 2   Rabbit : 1  
+##  AS     : 1   Reithrodontomys: 4   albigula : 1   Reptile: 9  
+##  BA     : 1   Sigmodon       : 4   audubonii: 1   Rodent :31  
+##  CB     : 1   Onychomys      : 3   baileyi  : 1               
+##  CM     : 1   Peromyscus     : 3   bilineata: 1               
+##  (Other):48   (Other)        :32   (Other)  :38</code></pre>
+</div>
+<div id="using-readr-to-read-csv" class="section level4">
+<h4>Using readr to read csv</h4>
+<pre class="r"><code>library(readr)
+
+d = read_csv('../data/r-ecology/species.csv')
+d</code></pre>
+<pre><code>##    species_id            genus         species    taxa
+## 1          AB       Amphispiza       bilineata    Bird
+## 2          AH Ammospermophilus         harrisi  Rodent
+## 3          AS       Ammodramus      savannarum    Bird
+## 4          BA          Baiomys         taylori  Rodent
+## 5          CB  Campylorhynchus brunneicapillus    Bird
+## 6          CM      Calamospiza     melanocorys    Bird
+## 7          CQ       Callipepla        squamata    Bird
+## 8          CS         Crotalus      scutalatus Reptile
+## 9          CT    Cnemidophorus          tigris Reptile
+## 10         CU    Cnemidophorus       uniparens Reptile
+## 11         CV         Crotalus         viridis Reptile
+## 12         DM        Dipodomys        merriami  Rodent
+## 13         DO        Dipodomys           ordii  Rodent
+## 14         DS        Dipodomys     spectabilis  Rodent
+## 15         DX        Dipodomys             sp.  Rodent
+## 16         EO          Eumeces       obsoletus Reptile
+## 17         GS         Gambelia           silus Reptile
+## 18         NL          Neotoma        albigula  Rodent
+## 19         NX          Neotoma             sp.  Rodent
+## 20         OL        Onychomys     leucogaster  Rodent
+## 21         OT        Onychomys        torridus  Rodent
+## 22         OX        Onychomys             sp.  Rodent
+## 23         PB      Chaetodipus         baileyi  Rodent
+## 24         PC           Pipilo       chlorurus    Bird
+## 25         PE       Peromyscus        eremicus  Rodent
+## 26         PF      Perognathus          flavus  Rodent
+## 27         PG        Pooecetes       gramineus    Bird
+## 28         PH      Perognathus        hispidus  Rodent
+## 29         PI      Chaetodipus     intermedius  Rodent
+## 30         PL       Peromyscus        leucopus  Rodent
+## 31         PM       Peromyscus     maniculatus  Rodent
+## 32         PP      Chaetodipus    penicillatus  Rodent
+## 33         PU           Pipilo          fuscus    Bird
+## 34         PX      Chaetodipus             sp.  Rodent
+## 35         RF  Reithrodontomys      fulvescens  Rodent
+## 36         RM  Reithrodontomys       megalotis  Rodent
+## 37         RO  Reithrodontomys        montanus  Rodent
+## 38         RX  Reithrodontomys             sp.  Rodent
+## 39         SA       Sylvilagus       audubonii  Rabbit
+## 40         SB         Spizella         breweri    Bird
+## 41         SC       Sceloporus          clarki Reptile
+## 42         SF         Sigmodon     fulviventer  Rodent
+## 43         SH         Sigmodon        hispidus  Rodent
+## 44         SO         Sigmodon    ochrognathus  Rodent
+## 45         SS     Spermophilus       spilosoma  Rodent
+## 46         ST     Spermophilus    tereticaudus  Rodent
+## 47         SU       Sceloporus       undulatus Reptile
+## 48         SX         Sigmodon             sp.  Rodent
+## 49         UL           Lizard             sp. Reptile
+## 50         UP           Pipilo             sp.    Bird
+## 51         UR           Rodent             sp.  Rodent
+## 52         US          Sparrow             sp.    Bird
+## 53         ZL      Zonotrichia      leucophrys    Bird
+## 54         ZM          Zenaida        macroura    Bird</code></pre>
+<pre class="r"><code>head(d)</code></pre>
+<pre><code>##   species_id            genus         species   taxa
+## 1         AB       Amphispiza       bilineata   Bird
+## 2         AH Ammospermophilus         harrisi Rodent
+## 3         AS       Ammodramus      savannarum   Bird
+## 4         BA          Baiomys         taylori Rodent
+## 5         CB  Campylorhynchus brunneicapillus   Bird
+## 6         CM      Calamospiza     melanocorys   Bird</code></pre>
+<pre class="r"><code>summary(d)</code></pre>
+<pre><code>##   species_id           genus             species         
+##  Length:54          Length:54          Length:54         
+##  Class :character   Class :character   Class :character  
+##  Mode  :character   Mode  :character   Mode  :character  
+##      taxa          
+##  Length:54         
+##  Class :character  
+##  Mode  :character</code></pre>
+</div>
+<div id="code-using-basic-functions-only" class="section level4">
+<h4>Code using basic functions only</h4>
+<pre class="r"><code>#read in csv
+surveys = read.csv('../data/r-ecology/surveys.csv')
+
+# view data
+head (surveys)</code></pre>
+<pre><code>##   record_id month day year plot_id species_id sex hindfoot_length weight
+## 1         1     7  16 1977       2         NL   M              32     NA
+## 2         2     7  16 1977       3         NL   M              33     NA
+## 3         3     7  16 1977       2         DM   F              37     NA
+## 4         4     7  16 1977       7         DM   M              36     NA
+## 5         5     7  16 1977       3         DM   M              35     NA
+## 6         6     7  16 1977       1         PF   M              14     NA</code></pre>
+<pre class="r"><code>summary (surveys)</code></pre>
+<pre><code>##    record_id         month             day             year     
+##  Min.   :    1   Min.   : 1.000   Min.   : 1.00   Min.   :1977  
+##  1st Qu.: 8888   1st Qu.: 4.000   1st Qu.: 9.00   1st Qu.:1984  
+##  Median :17775   Median : 6.000   Median :16.00   Median :1990  
+##  Mean   :17775   Mean   : 6.474   Mean   :16.11   Mean   :1990  
+##  3rd Qu.:26662   3rd Qu.: 9.000   3rd Qu.:23.00   3rd Qu.:1997  
+##  Max.   :35549   Max.   :12.000   Max.   :31.00   Max.   :2002  
+##                                                                 
+##     plot_id       species_id    sex       hindfoot_length     weight      
+##  Min.   : 1.0   DM     :10596    : 2506   Min.   : 2.00   Min.   :  4.00  
+##  1st Qu.: 5.0   PP     : 3123   F:15690   1st Qu.:21.00   1st Qu.: 20.00  
+##  Median :11.0   DO     : 3027   M:17348   Median :32.00   Median : 37.00  
+##  Mean   :11.4   PB     : 2891   P:    1   Mean   :29.29   Mean   : 42.67  
+##  3rd Qu.:17.0   RM     : 2609   R:    3   3rd Qu.:36.00   3rd Qu.: 48.00  
+##  Max.   :24.0   DS     : 2504   Z:    1   Max.   :70.00   Max.   :280.00  
+##                 (Other):10799             NA's   :4111    NA's   :3266</code></pre>
+<pre class="r"><code># limit columns to species and year
+surveys_2 = surveys[,c('species_id', 'year')]
+
+# limit rows to just species &quot;NL&quot;
+surveys_3 = surveys_2[,c('species_id', 'year')]
+
+# get count per year
+surveys_4 = aggregate(species_id ~ year, data=surveys_3, FUN= 'length')
+
+# write to csv
+write.csv(surveys_4, 'data/surveys_smccutcheon.csv', row.names = FALSE)</code></pre>
+</div>
+<div id="code-using-nested-functions" class="section level4">
+<h4>Code using nested functions</h4>
+<pre class="r"><code># read in data
+surveys = read.csv('../data/r-ecology/surveys.csv')
+
+# view data
+head(surveys)</code></pre>
+<pre><code>##   record_id month day year plot_id species_id sex hindfoot_length weight
+## 1         1     7  16 1977       2         NL   M              32     NA
+## 2         2     7  16 1977       3         NL   M              33     NA
+## 3         3     7  16 1977       2         DM   F              37     NA
+## 4         4     7  16 1977       7         DM   M              36     NA
+## 5         5     7  16 1977       3         DM   M              35     NA
+## 6         6     7  16 1977       1         PF   M              14     NA</code></pre>
+<pre class="r"><code>summary(surveys)</code></pre>
+<pre><code>##    record_id         month             day             year     
+##  Min.   :    1   Min.   : 1.000   Min.   : 1.00   Min.   :1977  
+##  1st Qu.: 8888   1st Qu.: 4.000   1st Qu.: 9.00   1st Qu.:1984  
+##  Median :17775   Median : 6.000   Median :16.00   Median :1990  
+##  Mean   :17775   Mean   : 6.474   Mean   :16.11   Mean   :1990  
+##  3rd Qu.:26662   3rd Qu.: 9.000   3rd Qu.:23.00   3rd Qu.:1997  
+##  Max.   :35549   Max.   :12.000   Max.   :31.00   Max.   :2002  
+##                                                                 
+##     plot_id       species_id    sex       hindfoot_length     weight      
+##  Min.   : 1.0   DM     :10596    : 2506   Min.   : 2.00   Min.   :  4.00  
+##  1st Qu.: 5.0   PP     : 3123   F:15690   1st Qu.:21.00   1st Qu.: 20.00  
+##  Median :11.0   DO     : 3027   M:17348   Median :32.00   Median : 37.00  
+##  Mean   :11.4   PB     : 2891   P:    1   Mean   :29.29   Mean   : 42.67  
+##  3rd Qu.:17.0   RM     : 2609   R:    3   3rd Qu.:36.00   3rd Qu.: 48.00  
+##  Max.   :24.0   DS     : 2504   Z:    1   Max.   :70.00   Max.   :280.00  
+##                 (Other):10799             NA's   :4111    NA's   :3266</code></pre>
+<pre class="r"><code># limit data with [], aggregate to count, write to csv
+write.csv(
+  aggregate(
+    species_id ~ year, 
+    data = surveys[surveys_2$species_id  == 'NL', c('species_id', 'year')], 
+    FUN = 'length'), 
+  'data/surveys_smccutcheon.csv',
+  row.names = FALSE)</code></pre>
+</div>
+<div id="code-using-dplyr" class="section level4">
+<h4>Code using dplyr</h4>
+<pre class="r"><code># load libraries
+library(readr)
+library(dplyr)
+
+# read in csv
+surveys = read_csv('../data/r-ecology/surveys.csv') 
+
+# dplyr elegance
+surveys %T&gt;%                          # note tee operator %T&gt;% for glimpse
+  glimpse() %&gt;%                       # view data
+  select(species_id, year) %&gt;%        # limit columns
+  filter(species_id  == 'NL') %&gt;%     # limit rows
+  group_by(year) %&gt;%                  # get count by first grouping
+  summarize(n = n()) %&gt;%              #   then summarize
+  write_csv('data/surveys_smccutcheon.csv') # write out csv</code></pre>
+<pre><code>## Observations: 35,549
+## Variables: 9
+## $ record_id       (int) 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14,...
+## $ month           (int) 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7...
+## $ day             (int) 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16...
+## $ year            (int) 1977, 1977, 1977, 1977, 1977, 1977, 1977, 1977...
+## $ plot_id         (int) 2, 3, 2, 7, 3, 1, 2, 1, 1, 6, 5, 7, 3, 8, 6, 4...
+## $ species_id      (chr) &quot;NL&quot;, &quot;NL&quot;, &quot;DM&quot;, &quot;DM&quot;, &quot;DM&quot;, &quot;PF&quot;, &quot;PE&quot;, &quot;DM&quot;...
+## $ sex             (chr) &quot;M&quot;, &quot;M&quot;, &quot;F&quot;, &quot;M&quot;, &quot;M&quot;, &quot;M&quot;, &quot;F&quot;, &quot;M&quot;, &quot;F&quot;, &quot;...
+## $ hindfoot_length (int) 32, 33, 37, 36, 35, 14, NA, 37, 34, 20, 53, 38...
+## $ weight          (int) NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA...</code></pre>
+</div>
+</div>
 </div>
 
 
