--- a/students/sparrow925.html
+++ b/students/sparrow925.html
@@ -68,8 +68,8 @@ img {
 </div>
 
 
-<div id="content" class="section level4">
-<h4><span style="color:red"><strong>Content</strong></span></h4>
+<div id="content" class="section level3">
+<h3><span style="color:red"><strong>Content</strong></span></h3>
 <p>I am interested in environmental remediation: pollution modeling and the data analysis that comes with that are my jam. I also think that the tools we are learning in this class are useful in the corporate setting – performance metrics, etc. could all be run through tools like this.</p>
 <p>I also have a <a href="www.elisewall.com">blog</a> where I post projects and classwork I’m particularly passionate about.</p>
 <p>But for practice, I thought I would tell you a little bit about Bill Murray!</p>
@@ -82,31 +82,31 @@ img {
 <p><small>Data for Bill Murray’s Box Office numbers sourced from <a href="http://www.the-numbers.com/person/103790401-Bill-Murray#tab=summary">here</a></small></p>
 <hr />
 </div>
-<div id="techniques" class="section level4">
-<h4><span style="color:red"><strong>Techniques</strong></span></h4>
+<div id="techniques" class="section level3">
+<h3><span style="color:red"><strong>Techniques</strong></span></h3>
 <p>Creating code that pushes graphs reflecting up-to-date datasets without doing more than clicking a button resonates deeply with me. Bring on the pretty graphs!</p>
 <hr />
 </div>
-<div id="data" class="section level4">
-<h4><span style="color:red"><strong>Data</strong></span></h4>
+<div id="data" class="section level3">
+<h3><span style="color:red"><strong>Data</strong></span></h3>
 <p>So far our group is only working with data samples given in RStudio, but as we evolve this quarter I’m excited to see what we dig up!</p>
 <hr />
 </div>
-<div id="data-wrangling" class="section level4">
-<h4><span style="color:red"><strong>Data Wrangling</strong></span></h4>
-<pre class="r"><code>library(readr)
-library(dplyr)</code></pre>
-<pre><code>## 
-## Attaching package: 'dplyr'</code></pre>
-<pre><code>## The following objects are masked from 'package:stats':
-## 
-##     filter, lag</code></pre>
-<pre><code>## The following objects are masked from 'package:base':
-## 
-##     intersect, setdiff, setequal, union</code></pre>
-<pre class="r"><code># setwd('students')
-# Hard to parse what head and summary are spitting out
-d = read.csv('./data/sparrow925_EUSO2.csv')
+<div id="data-wrangling" class="section level3">
+<h3><span style="color:red"><strong>Data Wrangling</strong></span></h3>
+<p>Note: Unsure how to make the following chunk run without showing its results.</p>
+<pre><code>
+Attaching package: 'dplyr'</code></pre>
+<pre><code>The following objects are masked from 'package:stats':
+
+    filter, lag</code></pre>
+<pre><code>The following objects are masked from 'package:base':
+
+    intersect, setdiff, setequal, union</code></pre>
+<div id="how-does-using-read_csv-from-the-readr-package-improve-data-readability" class="section level4">
+<h4>How does using read_csv from the readr package improve data readability?</h4>
+<p>Using read.csv (the default) is pretty messy and unhelpful</p>
+<pre class="r"><code>d = read.csv('./data/sparrow925_EUSO2.csv')
 head(d)</code></pre>
 <pre><code>##   country_code  city_name station_european_code type_of_station
 ## 1           AT Klagenfurt               AT2KA71      Background
@@ -147,6 +147,7 @@ head(d)</code></pre>
 ##  3rd Qu.: 18.27   3rd Qu.:0   
 ##  Max.   :116.80   Max.   :0   
 ## </code></pre>
+<p>Compare that to using read_csv, which gives you usefull info!</p>
 <pre class="r"><code># Oh man the head and summary here are so much more usable
 d2 = read_csv('./data/sparrow925_EUSO2.csv')
 head(d2)</code></pre>
@@ -184,56 +185,49 @@ head(d2)</code></pre>
 ##  Mean   :2013    Mean   : 15.67   Mean   :0   
 ##  3rd Qu.:2013    3rd Qu.: 18.27   3rd Qu.:0   
 ##  Max.   :2013    Max.   :116.80   Max.   :0</code></pre>
-<p>Let’s ask ourselves, how many cities are measured for each country?</p>
+<p>Now, lets use dplyr. Let’s ask ourselves, how many cities are measured for each country?</p>
+</div>
+<div id="using-multiple-variables" class="section level4">
+<h4>Using Multiple Variables</h4>
 <pre class="r"><code># read in csv
 d = read_csv('./data/sparrow925_EUSO2.csv')
 # view data
-head(d)</code></pre>
-<pre><code>## Source: local data frame [6 x 9]
-## 
-##   country_code  city_name station_european_code type_of_station
-##          (chr)      (chr)                 (chr)           (chr)
-## 1           AT Klagenfurt               AT2KA71      Background
-## 2           AT       Linz               AT4S415         Traffic
-## 3           AT       Linz               AT4S416      Background
-## 4           AT   Salzburg               AT51200      Background
-## 5           AT       Graz               AT60138      Background
-## 6           AT       Graz               AT60164         Traffic
-## Variables not shown: station_type_of_area (chr), component_caption (chr),
-##   statistics_year (int), ug/m3 (dbl), above_DLV? (int)</code></pre>
-<pre class="r"><code>summary(d)</code></pre>
-<pre><code>##  country_code        city_name         station_european_code
-##  Length:498         Length:498         Length:498           
-##  Class :character   Class :character   Class :character     
-##  Mode  :character   Mode  :character   Mode  :character     
-##                                                             
-##                                                             
-##                                                             
-##  type_of_station    station_type_of_area component_caption 
-##  Length:498         Length:498           Length:498        
-##  Class :character   Class :character     Class :character  
-##  Mode  :character   Mode  :character     Mode  :character  
-##                                                            
-##                                                            
-##                                                            
-##  statistics_year     ug/m3          above_DLV?
-##  Min.   :2013    Min.   :  0.90   Min.   :0   
-##  1st Qu.:2013    1st Qu.:  6.40   1st Qu.:0   
-##  Median :2013    Median : 10.40   Median :0   
-##  Mean   :2013    Mean   : 15.67   Mean   :0   
-##  3rd Qu.:2013    3rd Qu.: 18.27   3rd Qu.:0   
-##  Max.   :2013    Max.   :116.80   Max.   :0</code></pre>
-<pre class="r"><code># limit columns to country and city
+#head(d)
+#summary(d)
+# limit columns to country and city
 d2=d[,c('country_code','city_name')]
 # get count per country
 d3=aggregate(city_name ~ country_code, data=d2, FUN='length')
 # write out csv
 write.csv(d3, './data/sparrow925_EUSO2_citycount.csv', row.names = FALSE)</code></pre>
-<p>…There is a better way to format this…</p>
 </div>
-<div id="read-in-csv" class="section level1">
-<h1>read in csv</h1>
-<p>#… be careful, there is something wrong here and it crashes R sparrow925_EUSO2_dplyr = read_csv(‘./data/sparrow925_EUSO2.csv’) sparrow925_EUSO2_dplyr %T&gt;% glimpse() %&gt;% # view select(country_code, city_name) %&gt;% # limit columns #filter(country_code=‘DE’) %&gt;% # limit rows group_by(city_name) %&gt;% # get count by grouping summarize(n=n()) %&gt;% # then summarize write.csv(‘./data/sparrow925_EUSO2_citycount.csv’)</p>
+<div id="using-dplyr-to-write-compact-code" class="section level4">
+<h4>Using dplyr to Write Compact Code</h4>
+<pre class="r"><code>library(readr)
+library(dplyr)
+#setwd('students')
+
+# read in csv
+sparrow925_EUSO2_dplyr = read_csv('./data/sparrow925_EUSO2.csv')
+sparrow925_EUSO2_dplyr %T&gt;%
+  glimpse() %&gt;% # view 
+  select(country_code, city_name) %&gt;% # limit columns
+  #filter(country_code='DE') %&gt;% # limit rows
+  group_by(city_name) %&gt;% # get count by grouping
+  summarize(n=n()) %&gt;% # then summarize
+  write.csv('./data/sparrow925_EUSO2_citycount.csv')</code></pre>
+<pre><code>## Observations: 498
+## Variables: 9
+## $ country_code          (chr) &quot;AT&quot;, &quot;AT&quot;, &quot;AT&quot;, &quot;AT&quot;, &quot;AT&quot;, &quot;AT&quot;, &quot;AT&quot;...
+## $ city_name             (chr) &quot;Klagenfurt&quot;, &quot;Linz&quot;, &quot;Linz&quot;, &quot;Salzburg&quot;...
+## $ station_european_code (chr) &quot;AT2KA71&quot;, &quot;AT4S415&quot;, &quot;AT4S416&quot;, &quot;AT5120...
+## $ type_of_station       (chr) &quot;Background&quot;, &quot;Traffic&quot;, &quot;Background&quot;, &quot;...
+## $ station_type_of_area  (chr) &quot;urban&quot;, &quot;urban&quot;, &quot;urban&quot;, &quot;urban&quot;, &quot;sub...
+## $ component_caption     (chr) &quot;SO2&quot;, &quot;SO2&quot;, &quot;SO2&quot;, &quot;SO2&quot;, &quot;SO2&quot;, &quot;SO2&quot;...
+## $ statistics_year       (int) 2013, 2013, 2013, 2013, 2013, 2013, 2013...
+## $ ug/m3                 (dbl) 5.8, 12.2, 23.3, 4.9, 9.3, 6.1, 5.7, 7.5...
+## $ above_DLV?            (int) 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0...</code></pre>
+</div>
 </div>
 
 
